--- a/app/views/landing_pages/home.html.erb
+++ b/app/views/landing_pages/home.html.erb
@@ -5,6 +5,7 @@
 	</head>
 	<body>
 		<h1>Lingbin Cai</h1>
-		<a href='http://github.com/lingbinc/'>click me</a>
+		<%= link_to "index", users_path %>
+		<%= link_to "new", new_user_path %>
 	</body>
 </html>
