--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,17 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+		<%= form_for(@user) do |f| %>
+			<div class="field">
+				<p>name</p>
+				<%=f.text_field :name%>
+			</div>
+			<div class="field">
+				<p>ID</p>
+				<%=f.text_field :id%>
+			</div>
+			<div class="field">
+				<p>password</p>
+				<%=f.text_field :password%>
+			</div>
+			<div class="actions">
+				<%=f.submit %>
+			</div>
+		<% end %>
