user and course table built

--- a/app/views/landing_pages/home.html.erb
+++ b/app/views/landing_pages/home.html.erb
@@ -4,8 +4,12 @@
 		<title>Lingbin Cai Homepage</title>
 	</head>
 	<body>
-		<h1>Lingbin Cai</h1>
-		<%= link_to "index", users_path %>
-		<%= link_to "new", new_user_path %>
+		<h1>Lingbin Cai Courses</h1>
+		<p> User Table </p>
+		<%= link_to "Users", users_path %>
+		<%= link_to "Add User", new_user_path %><br>
+		<p> Course Table </p>
+		<%= link_to "Courses", courses_path %>
+		<%= link_to "Add Course", new_course_path %>
 	</body>
 </html>
