--- a/app/views/landing_pages/home.html.erb
+++ b/app/views/landing_pages/home.html.erb
@@ -11,5 +11,8 @@
 		<p> Course Table </p>
 		<%= link_to "Courses", courses_path %>
 		<%= link_to "Add Course", new_course_path %>
+		<p> Task Table </p>
+		<%= link_to "Tasks", tasklists_path %>
+		<%= link_to "Add Task", new_tasklist_path %>
 	</body>
 </html>
