--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,17 @@
 <table>
 	<tr>
 		<td>name</td>
-		<td>ID</td>
-	<td>password</td>
+		<td>id</td>
+		<td>password</td>
 	</tr>
 	<% @users.each do |user| %>
 	<tr>
 		<td><%= user.name %></td>
 		<td><%= user.id %></td>
 		<td><%= user.password %></td>
+		<td><%= link_to "show user", user_path(user.id) %></td>
+		<td><%= link_to "edit user", edit_user_path(user.id) %></td>
+		<td><%= link_to "destroy user", user, confirm:"Do you really want to delete?", method: :delete %></td>
 	</tr>
 	<% end %>
 </table>
-
