change id into email

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,8 +4,8 @@
 		<%= f.text_field :name%>
 	</div>
 	<div class="field">
-		<p>id</p>
-		<%= f.text_field :id%>
+		<p>email</p>
+		<%= f.text_field :email%>
 	</div>
 	<div class="field">
 		<p>password</p>
