--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,13 @@
 <table>
 	<tr>
 		<td>name</td>
-		<td>id</td>
+		<td>email</td>
 		<td>password</td>
 	</tr>
 	<% @users.each do |user| %>
 	<tr>
 		<td><%= user.name %></td>
-		<td><%= user.id %></td>
+		<td><%= user.email %></td>
 		<td><%= user.password %></td>
 		<td><%= link_to "show user", user_path(user.id) %></td>
 		<td><%= link_to "edit user", edit_user_path(user.id) %></td>
