--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RubyApp</title>
+  <title>Tackle Assignments</title>
+  <link rel="stylesheet" type="text/css" ref="../assets/bootstrap.css">
+  <script src="../assets/bootstrap.js"></script>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+<nav class="navbar navbar-default" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <a class="navbar-brand" href="#">Assignments</a>
+  </div>
+
+  <ul class="nav navbar-nav">
+    <li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Users<b class="caret"></b></a>
+    <ul class="dropdown-menu">
+      <li><%= link_to "Users List", users_path %></li>
+      <li><%= link_to "Add User", new_user_path %></li>
+    </ul>
+    </li>
+  </ul>
+  
+  <ul class="nav navbar-nav">
+    <li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses<b class="caret"></b></a>
+    <ul class="dropdown-menu">
+      <li><%= link_to "Courses List", courses_path %></li>
+      <li><%= link_to "Add Course", new_course_path %></li>
+    </ul>
+    </li>
+  </ul>
+
+  <ul class="nav navbar-nav">
+    <li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tasks<b class="caret"></b></a>
+    <ul class="dropdown-menu">
+      <li><%= link_to "Tasks List", tasklists_path %></li>
+      <li><%= link_to "Add Task", new_tasklist_path %></li>
+    </ul>
+    </li>
+  </ul>
+
+</nav>
 
 <%= yield %>
 
