--- a/app/views/tasklists/index.html.erb
+++ b/app/views/tasklists/index.html.erb
@@ -1,18 +1,20 @@
-<h1>Tasklists</h1>
+<h1 class="page_name">Tasklists</h1>
 <table>
 	<tr>
-		<td>title</td>
-		<td>course</td>
-		<td>user</td>
+		<td class="table_header">title</td>
+		<td class="table_header">course</td>
+		<td class="table_header">user</td>
 	</tr>
 	<% @task_lists.each do |task_list| %>
 	<tr>
 		<td><%= task_list.title %></td>
 		<td><%= task_list.course.name %></td>
 		<td><%= task_list.user.name %></td>
-		<td><%= link_to "show task", tasklist_path(task_list.id) %></td>
-		<td><%= link_to "edit task", edit_tasklist_path(task_list.id) %></td>
-		<td><%= link_to "destroy task", task_list, confirm:"Do you really want to delete?", method: :delete %></td>
+		<td>
+		<a><%= link_to "show", tasklist_path(task_list.id), :class => 'table_action'%></a>
+		<a><%= link_to "edit", edit_tasklist_path(task_list.id), :class => 'table_action'%></a>
+		<a><%= link_to "delete", task_list, confirm:"Do you really want to delete?", method: :delete, :class=> 'table_action'%></a>
+	    </td>
 	</tr>
 	<%end%>
 </table>
