--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,17 +1,20 @@
+<h1 class="page_name">Users</h1>
 <table>
 	<tr>
-		<td>name</td>
-		<td>email</td>
-		<td>password</td>
+		<td class='table_header'>name</td>
+		<td class='table_header'>email</td>
+		<td class='table_header'>password</td>
 	</tr>
 	<% @users.each do |user| %>
 	<tr>
 		<td><%= user.name %></td>
 		<td><%= user.email %></td>
 		<td><%= user.password %></td>
-		<td><%= link_to "show user", user_path(user.id) %></td>
-		<td><%= link_to "edit user", edit_user_path(user.id) %></td>
-		<td><%= link_to "destroy user", user, confirm:"Do you really want to delete?", method: :delete %></td>
+		<td>
+			<%= link_to "show", user_path(user.id), :class => 'table_action' %>
+			<%= link_to "edit", edit_user_path(user.id), :class => 'table_action' %>
+			<%= link_to "delete", user, confirm:"Do you really want to delete?", method: :delete, :class => 'table_action' %>
+		</td>
 	</tr>
 	<% end %>
 </table>
