--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,16 +15,6 @@
   <div class="navbar-header">
     <a class="navbar-brand" href="#">Assignments</a>
   </div>
-
-  <ul class="nav navbar-nav">
-    <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Users<b class="caret"></b></a>
-    <ul class="dropdown-menu">
-      <li><%= link_to "Users List", users_path %></li>
-      <li><%= link_to "Add User", new_user_path %></li>
-    </ul>
-    </li>
-  </ul>
   
   <ul class="nav navbar-nav">
     <li class="dropdown">
@@ -46,7 +36,22 @@
     </li>
   </ul>
 
+  <ul class="nav navbar-nav">
+    <% if user_signed_in? %>
+    <li>
+      <%= link_to('Logout', destroy_user_session_path, :method=>:delete) %>
+    </li>
+    <%else%>
+    <li>
+      <%=link_to('Login', new_user_session_path) %>
+    </li>
+    <%end%>
+  </ul>
+
 </nav>
+
+<p class="notice"><%=notice%></p>
+<p class="alert"><%=alert%></p>
 
 <%= yield %>
 
