--- a/app/views/notifications/new_tasklist.html.erb
+++ b/app/views/notifications/new_tasklist.html.erb
@@ -1,1 +1,1 @@
-<%= @greeting %>, you just created a new task! Check it and tackle it! Good luck! <%= tasklist_url(@id)%> 
+<%= @greeting %> You just created a new task! Check it and tackle it! Good luck! <%= tasklist_url(@id)%> 
