--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,6 +27,7 @@ h1,h2,h3,p,li,ul,table,td {
 
 h1 {
 	size: 30pt;
+	font-family: cursive;
 }
 
 h2 {
@@ -104,7 +105,8 @@ table {
 	text-align: center;
 }
 
-.table-division {
+.wrapper {
+	text-align: center;
 	margin-left: 10%;
 	margin-right:10%;
 	height:100%;
@@ -128,18 +130,18 @@ table {
 	padding: 10px;
 }
 
-.add_form {
-	margin: auto;
-	width: 50%;
-	text-align: center;
-}
-
 .error-msg {
 	color: red;
 }
 
 #homepage_list {
-	padding-left: 10px;
+	font-family: fantasy;
+}
+
+.home-link {
+	font-size: 18pt;
+	padding-right: 3%;
+	padding-left: 3%;
 }
 
 .button-cta,
