--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,43 +1,42 @@
+<div class="wrapper">
 <h1 class='page_name'>Courses</h1>
 <table>
 	<tr>
-		<td class='table_header'>name</td>
-		<td class='table_header'>difficulty</td>
+		<td class='table_header'>Name</td>
+		<td class='table_header'>Difficulty</td>
 	</tr>
 
-	<% @courses_easy.each do |course| %>
+	<% @courses_hard.each do |course| %>
 	<tr>
-		<td><%= course.name %></td>
-		<td><%= course.difficulty %></td>
+		<td class="tab-small"><%= link_to course.name, course_path(course.id), :class => 'table_action' %></td>
+		<td class="tab-small"><%= image_tag("hard.gif") %></td>
 		<td>
-			<%= link_to "show", course_path(course.id), :class => 'table_action' %>
 			<%= link_to "edit", edit_course_path(course.id), :class => 'table_action' %>
-			<%= link_to "delete", course, confirm:"Do you really want to delete?", method: :delete, :class => 'table_action' %>
+			<%= link_to image_tag("delete.gif"), course, confirm:"Do you really want to delete?", method: :delete, :class => 'table_action' %>
 		</td>
 	</tr>
 	<% end %>
 
 	<% @courses_medium.each do |course| %>
 	<tr>
-		<td><%= course.name %></td>
-		<td><%= course.difficulty %></td>
+		<td class="tab-small"><%= link_to course.name, course_path(course.id), :class => 'table_action' %></td>
+		<td class="tab-small"><%= image_tag("medium.gif") %></td>
 		<td>
-			<%= link_to "show", course_path(course.id), :class => 'table_action' %>
 			<%= link_to "edit", edit_course_path(course.id), :class => 'table_action' %>
-			<%= link_to "delete", course, confirm:"Do you really want to delete?", method: :delete, :class => 'table_action' %>
+			<%= link_to image_tag("delete.gif"), course, confirm:"Do you really want to delete?", method: :delete, :class => 'table_action' %>
 		</td>
 	</tr>
 	<% end %>
 
-	<% @courses_hard.each do |course| %>
+	<% @courses_easy.each do |course| %>
 	<tr>
-		<td><%= course.name %></td>
-		<td><%= course.difficulty %></td>
+		<td class="tab-small"><%= link_to course.name, course_path(course.id), :class => 'table_action' %></td>
+		<td class="tab-small"><%= image_tag("easy.gif") %></td>
 		<td>
-			<%= link_to "show", course_path(course.id), :class => 'table_action' %>
 			<%= link_to "edit", edit_course_path(course.id), :class => 'table_action' %>
-			<%= link_to "delete", course, confirm:"Do you really want to delete?", method: :delete, :class => 'table_action' %>
+			<%= link_to image_tag("delete.gif"), course, confirm:"Do you really want to delete?", method: :delete, :class => 'table_action' %>
 		</td>
 	</tr>
 	<% end %>
 </table>
+</div>
