--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,19 +1,19 @@
-<h1 class='page_name'>Add Courses</h1>
-<div class='add_form'>
-<%= form_for(@course) do |f| %>
-	<div class="field">
-		<h3>name</h3>
-		<%= f.text_field :name%>
-		<% if (@course.errors.include?(:name)) %>
-			<li class='error-msg'><%= @course.errors[:name]%></li>
-		<%end%>
-	</div>
-	<div class="field">
-		<h3>difficulty</h3>
-		<%= f.select( :difficulty, Course::DIFFICULTY_LEVEL) %>
-	</div>
-	<div class="actions">
-		<%= f.submit 'Create Course', :class => 'submit_button' %>
-	</div>
-<% end %>
+<div class='wrapper'>
+	<h1 class='page_name'>Add Courses</h1>
+	<%= form_for(@course) do |f| %>
+		<div class="field">
+			<h3>Title</h3>
+			<%= f.text_field :name%>
+			<% if (@course.errors.include?(:name)) %>
+				<li class='error-msg'><%= @course.errors[:name]%></li>
+			<%end%>
+		</div>
+		<div class="field">
+			<h3>Difficulty</h3>
+			<%= f.select( :difficulty, Course::DIFFICULTY_LEVEL) %>
+		</div>
+		<div class="actions">
+			<%= f.submit 'Create Course', :class => 'button-large-cta' %>
+		</div>
+	<% end %>
 </div>
