--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -3,10 +3,14 @@
 	<%= form_for(@course) do |f| %>
 		<div class="field">
 			<h3>Title</h3>
-			<%= f.text_field :name%>
+			<%= f.text_field :name, :class => "text-line"%>
 			<% if (@course.errors.include?(:name)) %>
 				<li class='error-msg'><%= @course.errors[:name]%></li>
 			<%end%>
+		</div>
+		<div class="field">
+			<h3>Course Description</h3>
+			<%= f.text_area :description, :class => "text-box"%>
 		</div>
 		<div class="field">
 			<h3>Difficulty</h3>
