--- a/app/views/tasklists/edit.html.erb
+++ b/app/views/tasklists/edit.html.erb
@@ -2,11 +2,15 @@
 	<h1 class='page_name'>Edit Task</h1>
 		<%= form_for(@task_list) do |f| %>
 			<div class="field">
-			<h3>Title</h3>
-			<%=f.text_field :title%>
-			<% if (@task_list.errors.include?(:title)) %>
-				<li class='error-msg'><%= @task_list.errors[:title]%></li>
-			<%end%>
+				<h3>Title</h3>
+				<%=f.text_field :title, :class => "text-line"%>
+				<% if (@task_list.errors.include?(:title)) %>
+					<li class='error-msg'><%= @task_list.errors[:title]%></li>
+				<%end%>
+			</div>
+			<div class="filed">
+				<h3>Description</h3>
+				<%=f.text_area :description, :class => "text-box"%>
 			</div>
 			<div class="field">
 				<h3>Course</h3>
