--- a/app/views/tasklists/new.html.erb
+++ b/app/views/tasklists/new.html.erb
@@ -3,10 +3,14 @@
 	<%= form_for(@task_list) do |f| %>
 		<div class="field">
 			<h3>Title</h3>
-			<%=f.text_field :title%>
+			<%=f.text_field :title, :class => "text-line"%>
 			<% if (@task_list.errors.include?(:title)) %>
 				<li class='error-msg'><%= @task_list.errors[:title]%></li>
 			<%end%>
+		</div>
+		<div class="filed">
+			<h3>Description</h3>
+			<%=f.text_area :description, :class => "text-box"%>
 		</div>
 		<div class="field">
 			<h3>Course</h3>
