--- a/app/views/tasklists/edit.html.erb
+++ b/app/views/tasklists/edit.html.erb
@@ -1,31 +1,30 @@
 <div class='wrapper'>
 	<h1 class='page_name'>Edit Task</h1>
-		<%= form_for(@task_list) do |f| %>
-			<div class="field">
-				<h3>Title</h3>
-				<%=f.text_field :title, :class => "text-line"%>
-				<% if (@task_list.errors.include?(:title)) %>
-					<li class='error-msg'><%= @task_list.errors[:title]%></li>
-				<%end%>
-			</div>
-			<div class="filed">
-				<h3>Description</h3>
-				<%=f.text_area :description, :class => "text-box"%>
-			</div>
-			<div class="field">
-				<h3>Course</h3>
-				<%=f.collection_select :course_id, Course.all, :id, :name %>
-			</div>
-			<div class="field">
-				<h3>Priority</h3>
-				<%= f.select( :priority, Tasklist::PRIORITY_LEVEL) %>
-			</div>
-			<div class="field">
-				<%= f.hidden_field :user_id, :value=>current_user.id%>
-			</div>
-
-			<div class="actions">
-				<%= f.submit 'Edit Task', :class => 'button-large-cta'%>
-			</div>
-		<%end%>
+	<%= form_for(@task_list) do |f| %>
+		<div class="field">
+			<h3>Title</h3>
+			<%=f.text_field :title, :class => "text-line"%>
+			<% if (@task_list.errors.include?(:title)) %>
+				<li class='error-msg'><%= @task_list.errors[:title]%></li>
+			<%end%>
+		</div>
+		<div class="filed">
+			<h3>Description</h3>
+			<%=f.text_area :description, :class => "text-box"%>
+		</div>
+		<div class="field">
+			<h3>Course</h3>
+			<%=f.collection_select :course_id, Course.order(:name), :id, :name %>
+		</div>
+		<div class="field">
+			<h3>Priority</h3>
+			<%= f.select( :priority, Tasklist::PRIORITY_LEVEL) %>
+		</div>
+		<div class="field">
+			<%= f.hidden_field :user_id, :value=>current_user.id%>
+		</div>
+		<div class="actions">
+			<%= f.submit 'Edit Task', :class => 'button-large-cta'%>
+		</div>
+	<%end%>
 </div>
