--- a/app/views/tasklists/new.html.erb
+++ b/app/views/tasklists/new.html.erb
@@ -14,7 +14,7 @@
 		</div>
 		<div class="field">
 			<h3>Course</h3>
-			<%=f.collection_select :course_id, Course.all, :id, :name %>
+			<%=f.collection_select :course_id, Course.order(:name), :id, :name %>
 		</div>
 		<div class="field">
 			<h3>Priority</h3>
@@ -23,7 +23,6 @@
 		<div class="field">
 			<%= f.hidden_field :user_id, :value=>current_user.id%>
 		</div>
-
 		<div class="actions">
 			<%= f.submit 'Create Task', :class => 'button-large-cta' %>
 		</div>
